fix: Change padding for <a> on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -323,7 +323,7 @@ nav h1 a:hover, nav h1 a:focus {
 
   #restaurants-list li a {
     width: 100%;
-    display: block;
+    padding: 10px 0;
   }
 }
 
